--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ theme:
 nav:
   - Overview: index.md
   - Hardware: hardware.md
+  - Cleaning: cleaning.md
   - Software: software.md
   - Troubleshooting: troubleshooting.md
   - Experimental Protocols: experimental-protocols.md
